# private-dao-voting

./: .gitignore  .vercelignore  ARCHITECTURE.md  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUBMISSION.md  TESTING.md  V2_SPECIFICATION.md  arcium-mock.ts  client.ts  e2e.test.ts  integration_tests.rs  lib.rs  mock-arcium.test.ts  mod.rs  package-lock.json  package.json  test.sh  tests.rs  tsconfig.json
.github/workflows/: ci.yml
arcis/voting-circuit/: Cargo.toml
arcis/voting-circuit/src/: lib.rs
frontend/: .env.example  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
frontend/components/: ActivityFeed.tsx  Confetti.tsx  CreateModal.tsx  DashboardLayout.tsx  DeveloperConsole.tsx  EncryptionAnimation.tsx  ErrorBoundary.tsx  ExportResults.tsx  HowItWorks.tsx  Icons.tsx  Modal.tsx  NetworkVisualization.tsx  OnboardingDrawer.tsx  PrivacyProtocol.tsx  ProposalCard.tsx  Sidebar.tsx  SkeletonCard.tsx  StatsBar.tsx  ThemeToggle.tsx  Toast.tsx  VoteProgress.tsx  WalletProvider.tsx
frontend/e2e/: voting-flow.spec.ts
frontend/hooks/: useKeyboardShortcuts.ts
frontend/idl/: private_dao_voting.json
frontend/lib/: arcium.ts  contract.ts  errors.ts  format.ts  retry.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/public/: manifest.json
frontend/styles/: globals.css
programs/private-dao-voting/: Cargo.toml
programs/private-dao-voting/src/: lib.rs
scripts/: setup-devnet.ts  test-devnet.ts
tests/: mock-arcium.test.ts  private-dao-voting.test.ts
(+2 files in other folders)
